--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "ShopBack",
   "license": "MIT",
   "devDependencies": {
+    "ansi-html": "0.0.7",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -34,10 +35,13 @@
     "eslint-plugin-react": "7.2.1",
     "extract-text-webpack-plugin": "2.1.2",
     "fs-extra": "4.0.2",
+    "html-entities": "1.2.1",
     "html-webpack-plugin": "2.30.1",
     "node-sass": "4.5.3",
     "react-test-renderer": "15.6.1",
     "sass-loader": "6.0.6",
+    "sockjs-client": "1.1.4",
+    "strip-ansi": "4.0.0",
     "style-loader": "0.17.0",
     "webpack": "2.6.1",
     "webpack-dev-server": "2.7.1",
