--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,6 +3,10 @@
   "name": "react-webextension-boilerplate",
   "version": "1.0",
 
+  "background": {
+    "scripts": ["js/background.bundle.js"]
+  },
+
   "browser_action": {
     "browser_style": true,
     "default_title": "React WebExtension Boilerplate",
