--- a/package.json
+++ b/package.json
@@ -49,7 +49,11 @@
   },
   "dependencies": {
     "chrome-browser-object-polyfill": "0.2.2",
+    "prop-types": "15.6.0",
     "react": "16.0.0",
-    "react-dom": "16.0.0"
+    "react-chrome-redux": "1.4.0",
+    "react-dom": "16.0.0",
+    "react-redux": "5.0.6",
+    "redux": "3.7.2"
   }
 }
